--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,12 +1,12 @@
-:root{
-    --azul: #1b14ef;
-    --blanco: #FFF;
-    --grisFondo: #ebebeb;
-    --grisBoton: #d0d0d0;
-    --colorTexto: #474747;
+:root {
+  --azul: #1b14ef;
+  --blanco: #fff;
+  --grisFondo: #ebebeb;
+  --grisBoton: #d0d0d0;
+  --colorTexto: #474747;
 }
 
-body{
-    padding: 0;
-    margin: 0;
+body {
+  padding: 0;
+  margin: 0;
 }
